@@ -5,6 +5,7 @@
 === 1.0.11 ===
 * Added possibility to implicitly specify data interfaces in constructors
   for lltl::pphash and lltl::phashset.
+* Removed Makefile.d. Dependencies are now automatically generated at the build stage.
 
 === 1.0.10 ===
 * Updated module versions in dependencies.
